# Paradox_localization_utils

./: .gitignore  .pre-commit-config.yaml  Licence.md  README.md  compile_update_paratranz.py  coverage.bat  coverage.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: flake8_test_coverage.yml
copy_on_other_languages/: README.txt  copy_on_other_languages.bat
paradox_localization_utils/: add_missing_lines.py  apply_diff.py  apply_diff_all.py  copy_code_only_texts.py  copy_on_other_languages.py  download_paratranz.py  extract_existing_translation.py  extract_paratranz_translation.py  get_duplicates_key.py  keep_edited_lines_only.py  push_translation_to_paratranz.py  read_localization_file.py  update_from_paratranz.py  update_paratranz.py  update_source.py
paradox_localization_utils/lib/: read_localization_file.py  write_localization_file.py
src/: add_missing_lines.py  add_missing_lines_files_update_version.py  agot_update_fr.py  apply_diff.py  apply_diff_all.py  copy_on_other_languages.py  download_paratranz.py  extract_existing_translation.py  extract_paratranz_translation.py  get_duplicates_key.py  read_localization_file.py  update_paratranz.py  update_source.py  utils.py
tests/: test_add_missing_lines_files_update_version.py  test_apply_diff.py  test_apply_diff_all.py  test_copy_code_only_texts.py  test_copy_on_other_languages.py  test_extract_existing_translation.py  test_extract_paratranz_translation.py  test_keep_edited_lines_only.py  test_read_localization_file.py  test_update_paratranz.py  utils.py
update_paratranz/: update_paratranz.bat
(+93 files in other folders)
